# secureaudit-ai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  DECISIONS.md  SPEC.md  last-output.txt  settings.json
.claude/scripts/: ralph.sh
.claude/skills/contracts/: audit-findings.schema.json  entra-context.schema.json  rbac-grants.schema.json
.claude/skills/entra-agent/: SKILL.md
.claude/skills/entra-agent/scripts/: collect.py
.claude/skills/rbac-agent/: SKILL.md
.claude/skills/rbac-agent/scripts/: collect.py
.claude/skills/report-agent/: SKILL.md
.claude/skills/risk-agent/: SKILL.md
.claude/skills/risk-agent/references/: cis-benchmark.md
.claude/skills/risk-agent/scripts/: analyze.py
.claude/skills/risk-agent/scripts/tools/: blast_radius.py  check_builtin_roles.py  check_unbound_roles.py  get_group.py  get_role.py  get_subject_grants.py  get_user.py  get_workload_identity.py
.claude/skills/secureaudit/: SKILL.md
.claude/skills/shared/lib/: grants.py
.devcontainer/: devcontainer.json
.github/workflows/: security.yml
agents/discovery/: rbac_discovery.py  rbac_discovery_output.json
agents/risk_assessment/: report_generator.py  risk_analyzer.py
tests/: test_cis514_subresource.py  test_cis_admin_edit_cluster.py  test_e8_azure_rbac_crossref.py  test_groups_with_access.py
